# Shared-Objects

./: README.md
testLib/: CMakeLists.txt  install.sh
testLib/inc/: test.h
testLib/src/: test.cpp
testLibInc/: CMakeLists.txt  install.sh  main.cpp
